[Hart] fix jagged green box on mobile view
On mobile, the default brand doesn't have the box extend to the
"locate me automatically", so we use that same behaviour, setting
the hart primary box only on media query.

--- a/web/cobrands/hart/base.scss
+++ b/web/cobrands/hart/base.scss
@@ -59,3 +59,22 @@ h1.main {
 #form_sign_in {
     margin-top: 1em;
 }
+
+#front-main {
+    /* default on mobile view, preventing jagged hart-green box */
+
+    margin: 0;
+    padding: 1em;
+
+    #postcodeForm {
+        padding: 1em;
+        div {
+            padding-top: 0px;
+            input#pc {
+            }
+            input#sub {
+                height: 100%;
+            }
+        }
+    }
+}
