--- a/web/cobrands/hart/hart.scss
+++ b/web/cobrands/hart/hart.scss
@@ -176,7 +176,6 @@ body.mappage .main-menu-wrapper {
   background-color: #FFF;
 
   #front-main-container {
-    background-color: $hart_primary;
     padding-bottom: 1em;
   }
 }
