--- a/web/cobrands/hart/layout.scss
+++ b/web/cobrands/hart/layout.scss
@@ -5,6 +5,10 @@
   .content {
     margin-top: 11em;
   }
+
+  }
+  #front-main-container {
+      background-color: $hart_primary;
 }
 
 #report-a-problem-sidebar {
